@@ -1,3 +1,14 @@
+2012-03-26  Mark Hahnenberg  <mhahnenberg@apple.com>
+
+        NRWT should retry failures serially
+        https://bugs.webkit.org/show_bug.cgi?id=82241
+
+        Reviewed by Dirk Pranke.
+
+        * Scripts/webkitpy/layout_tests/controllers/manager.py:
+        (Manager._run_tests): Add another parameter to specify the number of workers to use.
+        (Manager.run): Run the failures serially.
+
 2012-03-26  Adrienne Walker  <enne@google.com>
 
         Allow expectations on directories in virtual test suites
